# meson-gnome-link-order

./: .gitignore  README.md  run.sh
lib/: meson-sample-after.c  meson-sample-before.c  meson-sample-before.h  meson.build
lib-dep/: meson-sample-dep-after.c  meson-sample-dep-after.h  meson-sample-dep-before.c  meson-sample-dep-before.h  meson-sample-dep.pc.in  meson.build
lib/src/: meson-sample-docs.xml  meson-sample.h  meson.build  test.py
